--- a/config.json
+++ b/config.json
@@ -16,13 +16,13 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Your-Father",
+    "BOTNAME": "MONSTER-XWD",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100037743553265"
+        "61570275280952"
     ],
     "NDH": [
-        "100037743553265"
+        "61570275280952"
     ],
     "DATABASE": {
         "sqlite": {
