--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.143Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
         "key": "wl_cbv",
@@ -77,35 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61570275280952",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
-    },
-    {
-        "key": "xs",
-        "value": "9%3AENNvuHCUoFGwFw%3A2%3A1737045331%3A-1%3A10523",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
-    },
-    {
-        "key": "fr",
-        "value": "0QaSrKWGmuYjbaG1X.AWXYq-7LO33KZTFcN_Whq9yaH_o.BniRB_..AAA.0.0.BniTZU.AWWVzdYQniQ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
         "key": "wd",
@@ -113,16 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     },
     {
-        "key": "presence",
-        "value": "C%7B%22lm3%22%3A%22g.8404915639608107%22%2C%22t3%22%3A%5B%7B%22o%22%3A0%2C%22i%22%3A%22g.8990469164375908%22%7D%2C%7B%22o%22%3A0%2C%22i%22%3A%22g.7004469179659675%22%7D%5D%2C%22utc3%22%3A1737045679095%2C%22v%22%3A1%7D",
+        "key": "c_user",
+        "value": "61570534870615",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-01-16T16:42:46.144Z",
-        "lastAccessed": "2025-01-16T16:42:46.144Z"
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
+    },
+    {
+        "key": "xs",
+        "value": "7%3AMDIwSpikv80FMQ%3A2%3A1737046199%3A-1%3A14085",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
+    },
+    {
+        "key": "fr",
+        "value": "16cWpBEayAlhnmFEC.AWXMu0gIzpKxVXRN5ucR5_us674.BniTfm..AAA.0.0.BniTjE.AWV3445JmfI",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1737046221035%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-01-16T16:50:22.133Z",
+        "lastAccessed": "2025-01-16T16:50:22.133Z"
     }
 ]
